<?xml version="1.0"?>
<package format="2">
  <name>example_ros_plugins_pkg</name>
  <version>0.0.0</version>
  <description>The example_ros_plugins_pkg package</description>

  <maintainer email="dhruvtyagi@todo.todo">dhruvtyagi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>pluginlib</depend>


  <export>
    <example_ros_plugins_pkg plugin="${prefix}/ex_plugins.xml" />
  </export>

</package>
